Allow '-' and '_' in the url

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,5 +3,6 @@ RewriteEngine On
 # RewriteBase /
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
-# Dfine the Request, Responde and Next Parameter in the url
-RewriteRule ^([a-zA-Z]*)/?([a-zA-Z]*)?/?([a-zA-Z0-9]*)?/?$ index.php?req=$1&res=$2&next=$3 [NC,L]
+
+RewriteEngine On
+RewriteRule ^([a-zA-Z0-9-z\-\_]*)/?([a-zA-Z0-9-z\-\_]*)?/?([a-zA-Z0-9-z\-\_]*)?/?$ index.php?req=$1&res=$2&next=$3 [NC,L]
